--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,6 +11,7 @@
     "react-dom": "^16.13.1",
     "react-leaflet": "^2.6.3",
     "react-scripts": "3.4.1",
+    "react-scroll": "^1.7.16",
     "recharts": "^1.8.5"
   },
   "scripts": {
